--- a/src/bower.json
+++ b/src/bower.json
@@ -14,6 +14,8 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "~1.2.4"
+    "angular": "~1.2.4",
+    "angular-route": "~1.2.4",
+    "ngstorage": "~0.3.0"
   }
 }
