--- a/src/package.json
+++ b/src/package.json
@@ -3,6 +3,7 @@
     "version": "0.0.1",
     "main": "index.html",
     "window": {
+        "icon": "weather.png",
         "toolbar": false,
         "show": false,
         "width": 320,
